--- a/index.html
+++ b/index.html
@@ -190,6 +190,29 @@
                     <div class="col-lg-12">
                         <div class="row mainSpeakersList">
                             <div class="col-lg-3 col-md-6 col-9">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <a href="./speakers.html">
+                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                                src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="performer_heading">
+                                        <h4>Robert Kiyosaki</h4>
+                                        <div>
+                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/therealkiyosaki/"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                     <div data-tilt class="thumb">
                                         <a href="./speakers.html">
@@ -330,7 +353,7 @@
                                     <div data-tilt class="thumb">
                                         <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                                src="img/Speaker Photos/vaisakhanthampi.jpg" alt="">
+                                                src="img/Speaker Photos/vaisakhanthampi.jpeg" alt="">
                                         </a>
                                     </div>
                                     <div class="performer_heading">
@@ -348,29 +371,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-9">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div data-tilt class="thumb">
-                                        <a href="./speakers.html">
-                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                                src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="performer_heading">
-                                        <h4>Robert Kiyosaki</h4>
-                                        <div>
-                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-twitter"></a>
-                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-facebook"></a>
-                                            <a href="https://www.instagram.com/therealkiyosaki/"
-                                                style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                                style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
 
                             <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
