--- a/speakers.html
+++ b/speakers.html
@@ -91,6 +91,61 @@
                 <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Speakers</h1>
             </div>
             <!-- single performer -->
+            <div id="p2">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
+                                data-wow-delay=".3s">Robert Kiyosaki</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/therealkiyosaki/"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            Robert T. Kiyosaki is a writer, entrepreneur and the founder of the Rich Dad
+                                            Company. He is the author of the famed financial self-help book “RICH DAD
+                                            POOR DAD”. Mr.Kiyosaki has earned an international reputation in straight
+                                            talks, irreverence and courage, and has become a passionate advocate of
+                                            financial aptitude.Through his words, he has Influenced millions of people
+                                            in making better financial and investment decisions in their life.
+
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="p1">
                 <div class="row">
                     <div class="col-lg-8">
@@ -495,7 +550,7 @@
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/vaisakhanthampi.jpg" alt="">
+                                            src="img/Speaker Photos/vaisakhanthampi.jpeg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -529,61 +584,7 @@
                     </div>
                 </div>
             </div>
-            <div id="p2">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="section_title mb-50">
-                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
-                                data-wow-delay=".3s">Robert Kiyosaki</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="col-lg-8">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-6">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div data-tilt class="thumb">
-                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
-                                    </div>
-                                    <div class="performer_heading">
-                                        <!-- <h4>write anything</h4> -->
-                                        <!-- <span>Acoustic drum</span> -->
-                                        <div>
-                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-twitter"></a>
-                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-facebook"></a>
-                                            <a href="https://www.instagram.com/therealkiyosaki/"
-                                                style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                                style="color: aliceblue;" class="fa fa-youtube"></a>
-
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div>
-                                        <p>
-                                            Robert T. Kiyosaki is a writer, entrepreneur and the founder of the Rich Dad
-                                            Company. He is the author of the famed financial self-help book “RICH DAD
-                                            POOR DAD”. Mr.Kiyosaki has earned an international reputation in straight
-                                            talks, irreverence and courage, and has become a passionate advocate of
-                                            financial aptitude.Through his words, he has Influenced millions of people
-                                            in making better financial and investment decisions in their life.
-
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
             <div>
                 <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
             </div>
