--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             </div>
                             
 
-                            <!-- <div class="col-lg-3 col-md-6 col-9">
+                            <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./speakers.html">
@@ -392,7 +392,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
 
                         </div>
                     </div>
