--- a/speakers.html
+++ b/speakers.html
@@ -253,57 +253,7 @@
                     </div>
                 </div>
             </div>
-            <div id="p4">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="section_title mb-50">
-                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
-                                data-wow-delay=".3s">Susmita Adhikari
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="col-lg-8">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-6">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div data-tilt class="thumb">
-                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/Susmita.jpg" alt="">
-                                    </div>
-                                    <div class="performer_heading">
-                                        <!-- <h4>write anything</h4> -->
-                                        <!-- <span>Acoustic drum</span> -->
-                                        <div>
-                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
-                                            <a href="https://www.instagram.com/susmita_sashimi"
-                                                style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div>
-                                        <p>
-                                            Dr.Susmitha Adhikari, currently a postdoctoral researcher at Stanford
-                                            University, is a Cosmologist working on the formation of dark matter halos
-                                            and the galaxies within them and their evolution with cosmic time. Her
-                                            interest mostly lies in finding signatures of particle nature of dark matter
-                                            and the nature of gravity. She is a pioneer in her field, with more than 21
-                                            research works and 172 citations in her name.
-
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
             <!-- performar_area_end  -->
             <div id="p5">
                 <div class="row">
@@ -584,6 +534,57 @@
                     </div>
                 </div>
             </div>
+            <div id="p4">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
+                                data-wow-delay=".3s">Susmita Adhikari
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Susmita.jpg" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/susmita_sashimi"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            Dr.Susmitha Adhikari, currently a postdoctoral researcher at Stanford
+                                            University, is a Cosmologist working on the formation of dark matter halos
+                                            and the galaxies within them and their evolution with cosmic time. Her
+                                            interest mostly lies in finding signatures of particle nature of dark matter
+                                            and the nature of gravity. She is a pioneer in her field, with more than 21
+                                            research works and 172 citations in her name.
+
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
            
             <div>
                 <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
@@ -803,7 +804,7 @@
         // $('#p1').hide();
         //$('#p2').hide();
         // $('#p3').hide();
-        $('#p4').hide();
+        //$('#p4').hide();
         // $('#p5').hide();
         // $('#p6').hide();
         // $('#p7').hide();
