--- a/speakers.html
+++ b/speakers.html
@@ -253,7 +253,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- performar_area_end  -->
             <div id="p5">
                 <div class="row">
@@ -570,12 +570,11 @@
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div>
                                         <p>
-                                            Dr.Susmitha Adhikari, currently a postdoctoral researcher at Stanford
-                                            University, is a Cosmologist working on the formation of dark matter halos
-                                            and the galaxies within them and their evolution with cosmic time. Her
-                                            interest mostly lies in finding signatures of particle nature of dark matter
-                                            and the nature of gravity. She is a pioneer in her field, with more than 21
-                                            research works and 172 citations in her name.
+                                            Currently a postdoctoral researcher at Stanford University, Dr.Susmita is a
+                                            Cosmologist working on the formation of dark matter halos, the galaxies
+                                            within them and their evolution. As a young scientist, working both with
+                                            theory and observations, She is hard at work in understanding the grand
+                                            aspects of the universe and is shaping up to be a pioneer of her field.
 
                                         </p>
                                     </div>
@@ -585,7 +584,7 @@
                     </div>
                 </div>
             </div>
-           
+
             <div>
                 <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
             </div>
