--- a/register.html
+++ b/register.html
@@ -95,15 +95,15 @@
                     <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
                         SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
                         PURCHASE OPTION</h4>
-                    <ul >
+                    <ul>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● When and where is the event happening ?
                             </p>
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The event is happening on the 22nd of November, 2020 from 9:00 AM IST to 3:00 PM
-                                IST and will be done virtually via Zoom platform.
+                                The event is happening on the 22nd of November, 2020 and will be done virtually via Zoom
+                                platform. The detailed schedule and timings of TEDxTKMCE will be announced.
                             </p>
                         </li>
                         <li style="margin: 1%;">
@@ -112,7 +112,8 @@
                                 ● How will the sessions be held ?
                             </p>
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The event will be split up into two 2-hour sessions with a 30 minutes break in between.
+                                The event will be split up into two 2hour 30 minute sessions with a 30 minutes break in
+                                between.
                             </p>
                         </li>
                         <li style="margin: 1%;">
@@ -121,8 +122,8 @@
                                 ● How many speakers will be part of TEDxTKMCE ?
                             </p>
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                TEDxTKMCE will consist of 8 Speakers, 3 performers and an Interactive Guest
-                                Panel[separate from that of the Speakers].
+                                TEDxTKMCE will consist of 9 Speakers, 2 performers and an Interactive Guest
+                                Panelist[separate from that of the Speakers]
                             </p>
                         </li>
                         <li style="margin: 1%;">
@@ -158,7 +159,9 @@
                                 The price of the ticket is 300₹. Attendees that purchase the ticket will also be give a
                                 goodies bag which will contain a drawstring bag, notebook, keychain , pen and a thank
                                 you card. All of which are fully customized for TEDxTKMCE and will be shipped to the
-                                attendee’s residence within 10-15 working days from the day of the event.
+                                attendee’s residence within 10-15 working days from the day of the event.The goodies bag
+                                will be shipped free of cost to anywhere across India. The attendee may incur extra
+                                charges if it has to be shipped abroad.
 
 
                             </p>
@@ -174,7 +177,7 @@
                             </p>
                         </li>
                     </ul>
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         TERMS AND CONDITIONS</h3>
                     <ul id="termsAndConditions">
                         <li>
@@ -281,10 +284,9 @@
                         </li>
                         <li>
                             <p>
-                                12.Since the event will be done completely virtually in the entirety of its 5hr
-                                duration. We expect
-                                the attendee to create the necessary conditions on their own in order to ensure the best
-                                network strength and data availability required for the event.
+                                12.Since the event will be done completely virtually in the entirety of its 6hr
+                                duration. We expect the attendee to create the necessary conditions on their own in
+                                order to ensure the best network strength and data availability required for the event.
                             </p>
                         </li>
                         <li>
@@ -323,6 +325,8 @@
                                 days from the day of the event. Any changes regarding the delivery address should be
                                 notified
                                 prior via our email- contact@tedxtkmce.in
+                                The goodies bag will be shipped free of cost to anywhere across India. The attendee may
+                                incur extra charges if it has to be shipped abroad.
                             </p>
                         </li>
                         <li>
@@ -344,24 +348,26 @@
                                 tickets.
                             </p>
                         </li>
-                    </1l>
-                    <input type="checkbox" id="agreement" name="agreement" value="agreed">
-                    <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
+                        </1l>
+                        <input type="checkbox" id="agreement" name="agreement" value="agreed">
+                        <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
                 </div>
             </div>
 
             <div id="regFormArea" class="row">
                 <div class="col-12">
-                        
-                        <div class="row mt-3 ">
-                            <div class="col-xl-4 col-lg-4">
-                                <a id="get_tkt" href="https://www.yepdesk.com/embed/buy-tickets/5f9f870dc9e77c000113aa1c/private/hrpdh8d53n" style="font-family: tedFont;">
-                                    Proceed to Booking
-                                    </a>
-                            </div>
 
+                    <div class="row mt-3 ">
+                        <div class="col-xl-4 col-lg-4">
+                            <a id="get_tkt"
+                                href="https://www.yepdesk.com/embed/buy-tickets/5f9f870dc9e77c000113aa1c/private/hrpdh8d53n"
+                                style="font-family: tedFont;">
+                                Proceed to Booking
+                            </a>
                         </div>
+
                     </div>
+                </div>
                 <!-- <div class="col-lg-12">
                     <form class="form-contact contact_form" action="" method="post" id="regForm"
                         novalidate="novalidate">
