--- a/index.html
+++ b/index.html
@@ -465,6 +465,48 @@
                 </div>
             </div>
         </div>
+
+
+        <div id="speakers" class="performar_area black_bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="section_title mb-80">
+                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Interactive Sessions</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="row mainSpeakersList">
+
+                            <div class="col-lg-3 col-md-6 col-9">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <div data-tilt class="thumb">
+                                        <a href="./speakers.html">
+                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                                src="img/Speaker Photos/Roshan Mathews.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="performer_heading">
+                                        <h4>Roshan Mathew</h4>
+                                        <div>
+                                            <a href="https://twitter.com/roshanmathew22?lang=en" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/mathewroshan22/" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/roshan.matthew/?hl=en"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;"
+                                                class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- performar_area_end  -->
 
 
