--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
                                 style="font-family: tedFont;">November 22nd, 2020</span>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
-                                style="font-family: tedFont;"> - 09.00 AM</span>
+                                style="font-family: tedFont;">:  12.00 PM - 6:30 PM IST</span>
                             <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                                 <p style="font-family: tedFont;">TKM College of Engineering, Kollam</p>
                             </a>
