--- a/register.html
+++ b/register.html
@@ -90,96 +90,85 @@
 
             <div id="faqArea" class="row">
                 <div class="section_title mb-80 regHeading">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">FAQ
-                        & TERMS AND CONDITIONS</h3>
-                    <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
+                    <h3 style="margin: 1%;"  class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">FAQ</h3>
+                    <h4 style="margin: 1%;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
                         SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
                         PURCHASE OPTION</h4>
                     <ul>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● When and where is the event happening ?
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                WHEN ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The event is happening on the 22nd of November, 2020 and will be done virtually via Zoom
-                                platform. The detailed schedule and timings of TEDxTKMCE will be announced.
-                            </p>
-                        </li>
-                        <li style="margin: 1%;">
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● How will the sessions be held ?
-                            </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The event will be split up into two 2hour 30 minute sessions with a 30 minutes break in
-                                between.
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                22nd November,2020<br />
+                                12:00 PM IST- 6:30 PM IST
                             </p>
                         </li>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● How many speakers will be part of TEDxTKMCE ?
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                WHERE ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                TEDxTKMCE will consist of 9 Speakers, 2 performers and an Interactive Guest
-                                Panelist[separate from that of the Speakers]
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                Zoom Platform.
                             </p>
                         </li>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● What is the mode of execution for TEDxTKMCE 2020 ?
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                TICKET PRICE ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The talks from the speakers will all be pre recorded which will be followed by a
-                                15-20minute interactive session with the said speaker, the performances and
-                                interactive session panels will however be fully live.
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                300Rs. Inclusive of a goodies bag.
+                            </p>
+                        </li>
+                        <li style="margin: 1%;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                PANEL LIST ?
+                            </p>
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                9 speakers, 2 performers and 1 Guest Interactive Panelist.
+                            </p>
+                        </li>
+                        <li style="margin: 1%;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                MODE OF EXECUTION ? 
+                            </p>
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                Pre-recorded talks followed by an interactive session with the speaker.
+                                Fully
 
                             </p>
                         </li>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● Will all the Speakers have an interactive session with the attendees ?
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                WHAT DO I GET IN THE GOODIES BAG ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                Everyone part of the currently released line-up will participate in an interactive
-                                session.
-                                The availability of the rest of the speakers will be given as they are revealed in the
-                                coming days.
-                            </p>
-                        </li>
-                        <li style="margin: 1%;">
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● What is the price of the ticket ?
-                            </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The price of the ticket is 300₹. Attendees that purchase the ticket will also be give a
-                                goodies bag which will contain a drawstring bag, notebook, keychain , pen and a thank
-                                you card. All of which are fully customized for TEDxTKMCE and will be shipped to the
-                                attendee’s residence within 10-15 working days from the day of the event.The goodies bag
-                                will be shipped free of cost to anywhere across India. The attendee may incur extra
-                                charges if it has to be shipped abroad.
-
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                1x Drawstring bag, 1x Medium sized Notebook/Notepad, 1x keychain, 1x pen, certificate
+                                for participation. All customised for TEDxTKMCE.
 
                             </p>
                         </li>
                         <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-weight: bold">
-                                ● When will we receive the schedule and other details of the event ?
+                                style="font-weight: bold; font-size: 24px; color:  #FF4533;">
+                                HOW WILL I GET IT ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                The detailed schedule and all other instructions pertaining to TEDxTKMCE 2020 will be
-                                sent to the Attendee once they have purchased a ticket of admission to the event.
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                                It will be shipped to your residence. Free of cost.*
+
                             </p>
                         </li>
+                        <p style="font-size: medium; color: darkgrey; margin: 1%;">*Shipping abroad might incur extra charges for the attendee.</p>
                     </ul>
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
-                        TERMS AND CONDITIONS</h3>
-                    <ul id="termsAndConditions">
+                    <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
+                        TERMS AND CONDITIONS</h3> -->
+                    <!-- <ul id="termsAndConditions">
                         <li>
                             <p>
                                 1. Each Ticket you purchase from TEDxTKMCE 2020 is intended to give you a revocable
@@ -348,9 +337,9 @@
                                 tickets.
                             </p>
                         </li>
-                        </1l>
-                        <input type="checkbox" id="agreement" name="agreement" value="agreed">
-                        <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
+                        </ul> -->
+                    <input type="checkbox" id="agreement" name="agreement" value="agreed">
+                    <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
                 </div>
             </div>
 
